--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,25 @@
 </head>
 <body>
 <div class="container">
-    <header class="d-flex justify-content-lg-start py-3 bg-body-secondary">
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
-        </ul>
-    </header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Serri</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/config">Config</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="row">
         <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0">
