--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
             <div class="navbar-collapse collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class='nav-link {% if active_path == "/" %} active {% endif %}' href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/config">Config</a>
+                        <a class='nav-link {% if active_path == "config" %} active {% endif %}' href="/config">Config</a>
                     </li>
                 </ul>
             </div>
@@ -32,7 +32,10 @@
         <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0">
             <div class="list-group list-group-flush border-bottom scrollarea">
                 {% for port in config.serial_port %}
-                <a class="list-group-item list-group-item-action py-3 lh-sm"
+                <a class="list-group-item list-group-item-action py-3 lh-sm
+                    {% if active_device_index == Some(loop.index0).copied() %}
+                    active
+                    {% endif %}"
                    href="/device/{{ loop.index0 }}">
                     <div class="d-flex w-100 align-items-center justify-content-between">
                         <strong class="mb-1">
