--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/dist/index.css" rel="stylesheet">
-    <title>Serri</title>
-</head>
-<body>
-<div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Serri</span>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class='nav-link {% if active_path == "/" %} active {% endif %}' href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class='nav-link {% if active_path == "config" %} active {% endif %}' href="/config">Config</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="row">
-        <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0">
-            <div class="list-group list-group-flush border-bottom scrollarea">
-                {% for port in config.serial_port %}
-                <a class="list-group-item list-group-item-action py-3 lh-sm
+{% extends "base.html" %}
+{% block content %}
+<div class="row">
+    <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0">
+        {% if !serri_config.serial_port.is_empty() %}
+        <div class="list-group list-group-flush border-bottom scrollarea">
+            {% for port in serri_config.serial_port %}
+            <a class="list-group-item list-group-item-action py-3 lh-sm
                     {% if active_device_index == Some(loop.index0).copied() %}
                     active
                     {% endif %}"
-                   href="/device/{{ loop.index0 }}">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                        <strong class="mb-1">
-                            {% if let Some(title) = port.title %}
-                            {{ title }}
-                            {% else %}
-                            {{ port.serial_device.device }}
-                            {% endif %}
-                        </strong>
-                    </div>
-                    {% if let Some(description) = port.description %}
-                    <div class="pb-1 small text-truncate overflow-auto">{{ description }}</div>
-                    {% else if port.title.is_some() %}
-                    <div class="pb-1 small text-truncate overflow-auto">{{ port.serial_device.device
-                        }}
-                    </div>
-                    {% endif %}
-                </a>
-                {% endfor %}
-            </div>
+               href="/device/{{ loop.index0 }}">
+                <div class="d-flex w-100 align-items-center justify-content-between">
+                    <strong class="mb-1">
+                        {% if let Some(title) = port.title %}
+                        {{ title }}
+                        {% else %}
+                        {{ port.serial_device.device }}
+                        {% endif %}
+                    </strong>
+                </div>
+                {% if let Some(description) = port.description %}
+                <div class="pb-1 small text-truncate overflow-auto">{{ description }}</div>
+                {% else if port.title.is_some() %}
+                <div class="pb-1 small text-truncate overflow-auto">
+                    {{ port.serial_device.device }}
+                </div>
+                {% endif %}
+            </a>
+            {% endfor %}
         </div>
-
-        {% block device %}{% endblock %}
+        {% else %}
+        <p class="mt-3 ms-3">No serial devices configured.</p>
+        {% endif %}
     </div>
+
+    {% block device %}
+    <div class="col-lg">
+        <p class="mt-3">Select a device from the list on the left.</p>
+    </div>
+    {% endblock %}
 </div>
-<script src="/dist/index.js"></script>
-</body>
-</html>
+{% endblock %}
