--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-    <div class="col-lg-2 d-flex flex-column align-items-stretch flex-shrink-0">
+<div class="row gx-3">
+    <div class="col-xxl-2 d-flex flex-column align-items-stretch flex-shrink-0">
         {% if !serri_config.serial_port.is_empty() %}
         <div class="list-group list-group-flush border-bottom scrollarea">
             {% for port in serri_config.serial_port %}
@@ -35,8 +35,8 @@
     </div>
 
     {% block device %}
-    <div class="col-lg">
-        <p class="mt-3">Select a device from the list on the left.</p>
+    <div class="col">
+        <p class="mt-3">Select a device from the list.</p>
     </div>
     {% endblock %}
 </div>
