Some popout fixes

--- a/templates/device_popout.html
+++ b/templates/device_popout.html
@@ -9,8 +9,10 @@
 <body>
 <div class="container-fluid vh-100">
     <div class="row gx-3 h-100">
+        {% let is_popout = true %}
         {% include "device_view.html" %}
     </div>
 </div>
+<script src="/dist/base.js"></script>
 </body>
 </html>
