Logging improvements and stuff

--- a/templates/device/terminal_scripts.html
+++ b/templates/device/terminal_scripts.html
@@ -7,5 +7,5 @@
     alertPlaceholder.append(alert)
   }
 </script>
-<script src="/dist/device.js"></script>
-<link href="/dist/device.css" rel="stylesheet">
+<script src="/dist/device/device.js"></script>
+<link href="/dist/device/device.css" rel="stylesheet">
