--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                     </li>
                     <li class="nav-item">
                         <a class='nav-link {% if active_path == "/config" %} active {% endif %}'
-                           href="/config">Config</a>
+                           href="/about">About</a>
                     </li>
                 </ul>
             </div>
