--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                         <a class='nav-link {% if active_path == "/" %} active {% endif %}' href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class='nav-link {% if active_path == "/config" %} active {% endif %}'
+                        <a class='nav-link {% if active_path == "/about" %} active {% endif %}'
                            href="/about">About</a>
                     </li>
                 </ul>
